--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
                         <div id='corner-tl' class='corner'></div>
                         <div id='corner-tr' class='corner'></div>
                         <h3>What I Do</h3>
-                        <p>I am fond of developing MERN stack apps, integrating my apps with technologies of various flavor.</p>
+                        <p>I am fond of developing MERN stack apps, integrating my apps with technologies of various flavors.</p>
                         <div id='corner-br' class='corner'></div>
                         <div id='corner-bl' class='corner'></div>
                     </div>
