--- a/views/index.html
+++ b/views/index.html
@@ -130,10 +130,10 @@
         <div class='main-container'>
             <h3 style="text-align: center;">Message me!</h3>
             <form id='contact-form'>
-                <label>Name</label>
+                <label>Email</label>
                 <input id="i1" class="input-field" type='text' name="name">
                 <label>Subject</label>
-                <input  id="i2" class="input-field" type='text' name="subject" id="subject">
+                <input  id="i2" class="input-field" type='text' name="subject" >
                 <!-- <label>Email</label>
                 <input class="input-field" type='email' name="email"> -->
                 <label>Message</label>
@@ -145,11 +145,11 @@
     <script type="text/javascript" src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
-      $("contact-form").on("submit", e => {
+      $("#contact-form").on("submit", e => {
         e.preventDefault();
 
-        const email = 'ezenxaanmeiji@gmail.com';
-        const subject = $("#subject").val().trim();
+        const email = $("#i1").val().trim();
+        const subject = $("#i2").val().trim();
         const text = $("#text").val().trim();
 
         const data = {
@@ -157,9 +157,12 @@
           subject,
           text
         };
-
-        $.post("/email", data, function(){
+        console.log(data)
+        $.post("/email", data, function(data, status,xhr){
             console.log('server received data!')
+            console.log(data);
+            console.log(status);
+            console.log(xhr)
         })
       });
     </script>  
